--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,13 +14,17 @@ target_include_directories(Knocker PUBLIC
                         "${PROJECT_BINARY_DIR}"
                         "${PROJECT_SOURCE_DIR}/curlpp")
 
+include(FetchContent)
+FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/whoshuu/cpr.git GIT_TAG f4622efcb59d84071ae11404ae61bd821c1c344b) # the commit hash for 1.6.2
+FetchContent_MakeAvailable(cpr)
 
 #libgourou
 set(LIBGOUROU_LIB ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/libgourou.a)
+# set(LIBGOUROU_LIB ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/libgourou.)
 add_custom_target(build_libgourou ALL
-COMMAND ${CMAKE_MAKE_PROGRAM} BUILD_STATIC=1 BUILD_UTILS=0
-WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/libgourou
-COMMENT "Original libgourou makefile target")
+    COMMAND ${CMAKE_MAKE_PROGRAM} BUILD_STATIC=1 BUILD_UTILS=0
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/libgourou
+    COMMENT "Original libgourou makefile target")
 add_library(libgourou STATIC IMPORTED)
 set_property(TARGET libgourou APPEND PROPERTY IMPORTED_CONFIGURATIONS NOCONFIG)
 set_target_properties(libgourou PROPERTIES
@@ -28,18 +32,20 @@ IMPORTED_LOCATION_NOCONFIG "${LIBGOUROU_LIB}")
 add_dependencies(libgourou build_libgourou)
 
 #updflibrary
-file(GLOB UPDFLIBRARY_OBJS "${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/obj/*")
-set(UPDFLIBRARY ${UPDFLIBRARY_OBJS})
+set(UPDFLIBRARY_OBJS ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/obj/uPDFTypes.o)
+set(UPDFLIBRARY_OBJS ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/obj/uPDFParser.o)
+set(UPDFLIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/libupdfparser.a)
+# set(UPDFLIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/obj/*")
 add_library(updflibrary STATIC IMPORTED)
 set_property(TARGET updflibrary APPEND PROPERTY IMPORTED_CONFIGURATIONS NOCONFIG)
 set_target_properties(updflibrary PROPERTIES
 IMPORTED_LOCATION_NOCONFIG "${UPDFLIBRARY}")
-
+include_directories(libgourou/utils)
 
 set(curlpp_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/curlpp/include)
 set(pugixml_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/pugixml/src)
 add_subdirectory(lib)
 #curlpp
 target_link_directories(Knocker PUBLIC curlpp libgourou)
-target_link_libraries(Knocker PRIVATE KnockerLibs )
-target_link_libraries(Knocker PRIVATE ${UPDFLIBRARY_OBJS})
+target_link_libraries(Knocker PRIVATE KnockerLibs cpr::cpr)
+target_link_libraries(Knocker PRIVATE ${UPDFLIBRARY_OBJS} ${UPDFLIBRARY})
