clean up cmakes remove curlpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,52 +1,42 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 
 # set the project name
 project(Knocker)
 set(CMAKE_CXX_STANDARD 20)
 
-add_subdirectory(curlpp)
-
-# add the executable
-add_executable(Knocker src/main.cc)
-
-include_directories(libgourou/include)
-include_directories(libgourou/utils)
-target_include_directories(Knocker PUBLIC
-                        "${PROJECT_BINARY_DIR}"
-                        "${PROJECT_SOURCE_DIR}/curlpp")
+if (CMAKE_BINARY_DIR STREQUAL CMAKE_SOURCE_DIR)
+    message(FATAL_ERROR "Source and build directories cannot be the same.")
+endif()
 
 include(FetchContent)
 FetchContent_Declare(cpr GIT_REPOSITORY https://github.com/whoshuu/cpr.git GIT_TAG 1.6.2)
 FetchContent_MakeAvailable(cpr)
 
 #libgourou
+set(LIBGOUROU_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/utils)
 set(LIBGOUROU_LIB ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/libgourou.a)
-# set(LIBGOUROU_LIB ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/libgourou.)
 add_custom_target(build_libgourou ALL
     COMMAND ${CMAKE_MAKE_PROGRAM} BUILD_STATIC=1 BUILD_UTILS=0
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/libgourou
     COMMENT "Original libgourou makefile target")
 add_library(libgourou STATIC IMPORTED)
 set_property(TARGET libgourou APPEND PROPERTY IMPORTED_CONFIGURATIONS NOCONFIG)
-set_target_properties(libgourou PROPERTIES
-IMPORTED_LOCATION_NOCONFIG "${LIBGOUROU_LIB}")
+set_target_properties(libgourou PROPERTIES IMPORTED_LOCATION_NOCONFIG "${LIBGOUROU_LIB}")
 add_dependencies(libgourou build_libgourou)
 
 #updflibrary
-set(UPDFLIBRARY_OBJS ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/obj/uPDFTypes.o)
-set(UPDFLIBRARY_OBJS ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/obj/uPDFParser.o)
 set(UPDFLIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/libupdfparser.a)
-# set(UPDFLIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/obj/*")
+set(UPDFLIBRARY_OBJS
+    ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/obj/uPDFTypes.o
+    ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/updfparser/obj/uPDFParser.o)
 add_library(updflibrary STATIC IMPORTED)
 set_property(TARGET updflibrary APPEND PROPERTY IMPORTED_CONFIGURATIONS NOCONFIG)
-set_target_properties(updflibrary PROPERTIES
-IMPORTED_LOCATION_NOCONFIG "${UPDFLIBRARY}")
-include_directories(libgourou/utils)
+set_target_properties(updflibrary PROPERTIES IMPORTED_LOCATION_NOCONFIG "${UPDFLIBRARY}")
 
-set(curlpp_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/curlpp/include)
 set(pugixml_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/libgourou/lib/pugixml/src)
+
+
 add_subdirectory(lib)
-#curlpp
-target_link_directories(Knocker PUBLIC curlpp libgourou)
-target_link_libraries(Knocker PRIVATE KnockerLibs cpr::cpr)
-target_link_libraries(Knocker PRIVATE ${UPDFLIBRARY_OBJS} ${UPDFLIBRARY})
+
+add_subdirectory(src)
