--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,22 +1,23 @@
-project(KnockerLibs)
-add_library(KnockerLibs knock_drmclient.cpp)
+set(MODULE_NAME KnockerLibs)
+
+add_library(${MODULE_NAME} STATIC knock_drmclient.cpp)
 
 find_library(libzip REQUIRED)
 find_package(ZLIB REQUIRED)
 
-
 set(OPENSSL_USE_STATIC_LIBS TRUE)
 find_package(OpenSSL REQUIRED)
-target_link_libraries(${PROJECT_NAME} PUBLIC
+
+target_include_directories(${MODULE_NAME} PUBLIC
+    "${pugixml_INCLUDE_DIRS}"
+    "${LIBGOUROU_INCLUDE}"
+)
+
+target_link_libraries(${MODULE_NAME} PUBLIC
                         OpenSSL::Crypto
                         zip
                         ZLIB::ZLIB
-                        updflibrary
+                        ${UPDFLIBRARY_OBJS}
                         libgourou
                         cpr::cpr)
-
-target_link_directories(KnockerLibs PUBLIC curlpp)
-target_include_directories(KnockerLibs PUBLIC
-                          "${curlpp_INCLUDE_DIRS}"
-                          "${pugixml_INCLUDE_DIRS}"
-                          )
+# target_link_libraries(${MODULE_NAME} PUBLIC ${LIBGOUROU_LIB})
