--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,7 +24,7 @@ jobs:
         submodules: true
     
     - name: installs deps
-      run: sudo apt update && sudo apt install -y libcurl4-openssl-dev libssl-dev zlib1g-dev libzip4
+      run: sudo apt update && sudo apt install -y libcurl4-openssl-dev libssl-dev zlib1g-dev libzip-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
