--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,7 +2,22 @@ set(MODULE_NAME KnockerLibs)
 
 add_library(${MODULE_NAME} STATIC knock_drmclient.cpp)
 
-find_library(libzip REQUIRED)
+FIND_PATH(LIBZIP_INCLUDE_DIR zip.h
+    $ENV{LIBZIP_DIR}/include
+    $ENV{LIBZIP_DIR}
+    /usr/local/include
+    /usr/include
+)
+
+FIND_LIBRARY(LIBZIP_LIBRARY
+    NAMES libzip zip
+    PATHS
+    $ENV{LIBZIP_DIR}/lib
+    $ENV{LIBZIP_DIR}
+    /usr/local/lib
+    /usr/lib
+    REQUIRED
+)
 find_package(ZLIB REQUIRED)
 
 set(OPENSSL_USE_STATIC_LIBS TRUE)
